# ui_anim_handson

./: .gitignore  Cargo.toml  LICENCE  README.md
src/: main.rs  slide_plugin.rs
src/slide_plugin/: percent.rs
