[package]
name = "ui_anim_handson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
thiserror = "1.0"
rstest = "0.16"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
